--- a/index.html
+++ b/index.html
@@ -287,8 +287,7 @@
 									data-settings="{&quot;_animation&quot;:&quot;fadeInLeft&quot;}"
 									data-widget_type="heading.default">
 									<div class="elementor-widget-container">
-										<h1 class="elementor-heading-title elementor-size-default">Revolutionizing
-											Business with Technology
+										<h1 class="elementor-heading-title elementor-size-default">Revolutionizing Business with Technology
 										</h1>
 									</div>
 								</div>
@@ -580,8 +579,7 @@
 									<div class="elementor-element elementor-element-dbf77e8 elementor-widget elementor-widget-heading"
 										data-id="dbf77e8" data-element_type="widget" data-widget_type="heading.default">
 										<div class="elementor-widget-container">
-											<h2 class="elementor-heading-title elementor-size-default">Yes, We know that
-												you're unique
+											<h2 class="elementor-heading-title elementor-size-default">Explore the services we offer
 											</h2>
 										</div>
 									</div>
@@ -605,7 +603,7 @@
 											data-widget_type="button.default">
 											<div class="elementor-widget-container">
 												<div class="elementor-button-wrapper">
-													<a href="#"
+													<a href="../services/index.html"
 														class="elementor-button-link elementor-button elementor-size-sm elementor-animation-float"
 														role="button">
 														<span class="elementor-button-content-wrapper">
@@ -958,7 +956,7 @@
 								<div class="elementor-element elementor-element-febb96b elementor-widget elementor-widget-text-editor"
 									data-id="febb96b" data-element_type="widget" data-widget_type="text-editor.default">
 									<div class="elementor-widget-container">
-										Want to Work with us.<br>
+										Want to Work with us?<br>
 
 
 										Join our team of innovative minds and shape the future of technology.
